--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
 	},
 	"dependencies": {
 		"@rollup/plugin-typescript": "^11.1.6",
-		"vite": "^3.2.5",
-		"path": "^0.12.7"
+		"path": "^0.12.7",
+		"rollup-plugin-copy": "^3.5.0",
+		"vite": "^3.2.5"
 	}
 }
