--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 	},
 	"dependencies": {
 		"@rollup/plugin-typescript": "^11.1.6",
+		"glob": "^10.3.12",
 		"path": "^0.12.7",
 		"rollup-plugin-copy": "^3.5.0",
 		"vite": "^3.2.5"
