--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@digital-butlers/components-test",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "type": "module",
   "description": "A convenient library with various components for everyday tasks",
   "keywords": [
     "accordions",
-    "tabs"
+    "tabs",
+    "pagination",
+    "components"
   ],
   "private": false,
   "main": "./dist/index.js",
@@ -16,10 +18,9 @@
     "email": "digitalbutlers.team@gmail.com"
   },
   "exports": {
+    ".": "./dist/index.js",
     "./accordions": "./dist/accordions/index.js",
     "./accordions/index.css": "./dist/accordions/index.css",
-    "./assets": "./dist/assets/index.js",
-    "./assets/index.css": "./dist/assets/index.css",
     "./pagination": "./dist/pagination/index.js",
     "./pagination/index.css": "./dist/pagination/index.css",
     "./tabs": "./dist/tabs/index.js",
@@ -27,7 +28,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && node update-exports.js && node generate-index.js",
+    "build": "tsc && vite build && node build-configuration.js",
     "preview": "vite preview",
     "post": "npm publish --access public"
   },
